[package]
name = "tem-launcher"
version = "0.1.0"
description = "A custom launcher for Tron: Evolution."
authors = ["NeKz"]
license = "MIT"
repository = "https://github.com/NeKzor/tem"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-ini = "0.18.0"
windows-sys = "0.48.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
]
